# self-rust-sdk

./: Cargo.toml  README.md  build.rs
.github/workflows/: ci.yml
src/: account.rs  error.rs  keypair.rs  lib.rs  messaging.rs
src/account/: account.rs  inbox.rs  keypair.rs  message.rs  mod.rs  operation.rs  outbox.rs  responder.rs  token.rs
src/credential/: did.rs  mod.rs  model.rs  presentation.rs
src/crypto/: account.rs  aead.rs  e2e.rs  hash.rs  mod.rs  omemo.rs  pow.rs  random.rs  session.rs
src/error/: error.rs  mod.rs
src/hashgraph/: graph.rs  mod.rs  node.rs  operation.rs  role.rs
src/identifier/: address.rs  identifier.rs  mod.rs
src/keypair/: exchange.rs  mod.rs  signing.rs
src/message/: chat.rs  content.rs  credential.rs  envelope.rs  event.rs  message.rs  mod.rs  presentation.rs  receipt.rs  request.rs  response.rs  signed.rs  signed_message.rs  status.rs  types.rs
src/messaging/: manager.rs  messaging.rs  mod.rs
src/object/: mod.rs
src/protocol/: acl.rs  aclcommand.rs  auth.rs  err_type.rs  header.rs  message.rs  messaging.fbs  messaging.rs  metadata.rs  mod.rs  msg_sub_type.rs  msg_type.rs  notification.rs
src/protocol/api/: api.proto  mod.rs
src/protocol/hashgraph/: hashgraph.fbs  hashgraph.rs
src/protocol/messaging/: messaging.fbs  messaging.rs
src/protocol/p2p/: mod.rs  p2p.proto
src/protocol/siggraph/: mod.rs  siggraph.rs
src/session/: mod.rs  session.rs
src/siggraph/: action.rs  graph.rs  mod.rs  node.rs  operation.rs  schema.fbs  schema.rs  siggraph.rs
src/storage/: STORAGE.md  adapter.rs  connection.rs  error.rs  group.rs  key.rs  mod.rs  query.rs  schema.rs  session.rs  statement.rs  storage.rs  transaction.rs
src/tests/: integration_test.rs
src/time/: mod.rs  ntp.rs  time.rs
src/token/: mod.rs  token.rs
src/transport/: mod.rs  object.rs  rest.rs  rpc.rs  websocket.rs
tests/: account.rs
