[package]
name = "self_sdk"
version = "0.1.0"
edition = "2021"
categories = ["encoding", "no-std"]
description = "An SDK for interacting with the self network"
homepage = "https://joinself.com"
repository = "https://github.com/joinself/self-rust-sdk"
authors = ["Tom Bevan <tom@joinself.com>"]
readme = "README.md"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = "0.13.1"
chrono = "0.4.22"
crossbeam = "0.8.2"
flatbuffers = "2.1.2"
futures-util = "0.3.25"
hex = "0.4.3"
libc = "0.2"
ntp = "0.5.0"
olm_sys = { git = "https://github.com/joinself/olm-sys" }
reqwest = { version = "0.11", default-features = false, features = ["blocking", "json", "rustls-tls"] }
serde = { version = "1.0.147", features = ["derive"] }
serde_cbor = "0.10"
serde_json = "1.0.87"
sodium_sys = { git = "https://github.com/joinself/sodium-sys" }
tokio = { version = "1.23.0", features = ["macros"] }
tokio-tungstenite = { version = "0.18.0", features = ["rustls-tls-native-roots"] }
tungstenite = "0.18.0"
url = "2.3.1"
uuid = "1.2.1"

[dev-dependencies]
httptest = "0.15.4"
