[package]
name = "self_sdk"
version = "0.1.0"
edition = "2021"
categories = ["encoding", "no-std"]
description = "An SDK for interacting with the self network"
homepage = "https://joinself.com"
repository = "https://github.com/joinself/self-rust-sdk"
authors = ["Tom Bevan <tom@joinself.com>"]
readme = "README.md"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = "0.13.1"
chrono = "0.4.22"
coset = "0.3.4"
crossbeam = "0.8.2"
flatbuffers = "24.3.25"
futures-util = "0.3.25"
hex = "0.4.3"
http = "0.2.9"
libc = "0.2"
libsqlite3-sys = { version = "0.28.0", features = ["bundled"] }
mockall = "0.11.4"
ntp = "0.5.0"
openmls = "0.5.0"
openmls_basic_credential = "0.2.0"
openmls_rust_crypto = "0.2.0"
openmls_traits = "0.2.0"
postcard = { version = "1.0.8", features = ["alloc"] }
prost = { version = "0.12" }
rand = "0.8.5"
rand_chacha = "0.3.1"
reqwest = { version = "0.11", default-features = false, features = ["blocking", "json", "rustls-tls"] }
serde = { version = "1.0.147", features = ["derive"] }
serde_json = "1.0.94"
sha3 = "0.10.8"
sodium_sys = { git = "https://github.com/joinself/sodium-sys" }
tokio = { version = "1.37.0", features = ["macros", "rt-multi-thread"] }
tokio-tungstenite = { version = "0.21.0", features = ["rustls-tls-native-roots"] }
tonic = { version = "0.11" }
tungstenite = "0.18.0"
url = "2.3.1"
uuid = "1.2.1"

[dev-dependencies]
httptest = "0.16.0"
self-test-mock = { path = "/home/tom/code/self/self-test-mock" } #git = "https://github.com/joinself/self-test-mock" }

[build-dependencies]
tonic-build = "0.11"
